# wasmple

./: .eslintrc.js  .gitignore  Cargo.toml  LICENSE  README.md  index.html  jest.config.js  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/actions/cache_cargo/: action.yml
.github/workflows/: cd-cfpages.yml  ct.yml  pr.yml  pu-cfpages.yml
src/: App.tsx  app.tsx  index.tsx  tailwind.css  wasmple.d.ts  wasmple.js
src/components/: animate.tsx  main.tsx
src/wasm/: buffer.test.ts  buffer.ts  console.test.ts  console.ts  wasmple.ts
study/: Cargo.toml
study/src/: main.rs
wasmple/: Cargo.toml
wasmple/examples/: generate-typescript.rs
wasmple/src/: buffer.rs  console.rs  lib.rs
wasmple/src/buffer/: alloc.rs  buffer.rs  convert.rs  export.rs  manager.rs
wasmple/src/buffer/convert/: json.rs  string.rs
wasmple/src/console/: define.rs  export.rs  import.rs
wasmple_bridge/: Cargo.toml
wasmple_bridge/src/: lib.rs
wasmple_bridge_attribute/: Cargo.toml
wasmple_bridge_impl/: Cargo.toml
wasmple_bridge_impl/src/: lib.rs  totstype.rs
wasmple_bridge_impl/src/totstype/: fields.rs  fieldsnamed.rs  fnarg.rs  item.rs  itemenum.rs  itemfn.rs  itemstruct.rs  itemtype.rs  pat.rs  type.rs  typepath.rs  variant.rs
wasmple_buffer/: Cargo.toml
wasmple_buffer/examples/: bridge-ts-buffer.rs
wasmple_buffer/src/: buffer.rs  convert.rs  define.rs  export.rs  lib.rs  manager.rs
wasmple_buffer/src/convert/: json.rs  string.rs
wasmple_buffer_derive/: Cargo.toml
wasmple_buffer_derive/src/: lib.rs
wasmple_console/: Cargo.toml
wasmple_console/examples/: bridge-ts-console.rs
wasmple_console/src/: console.rs  define.rs  export.rs  lib.rs
wasmple_console/src/console/: define.rs
