[package]
name = "wasmple"
description = "a sample project for WebAssembly with Rust & SolidJS."
version = "0.2.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true

[dependencies]
once_cell = "1.15.0"
itertools = "0.10.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
