[package]
name = "wasmple"
description = "a sample project for WebAssembly with Rust & SolidJS."
version = "0.4.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.10.5"
serde = { version = "1.0.147", features = ["derive"] }
wasmple_buffer = { path = "../wasmple_buffer" }
wasmple_console = { path = "../wasmple_console" }

[dev-dependencies]
rstest = "0.15.0"
