[package]
name = "wasmple_bridge_impl"
description = "a sample project for WebAssembly with Rust & SolidJS."
version = "0.4.5"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
convert_case = "0.6.0"
proc-macro2 = "1.0.47"
quote = "1.0.21"
syn = "1.0.103"

[dev-dependencies]
rstest = "0.15.0"
