[package]
name = "wasmple_buffer"
description = "a sample project for WebAssembly with Rust & SolidJS."
version = "0.3.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "z"
lto = true

[dependencies]
once_cell = "1.15.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
wasmple_console = { path = "../wasmple_console" }
