[package]
name = "wasmple_buffer"
description = "a sample project for WebAssembly with Rust & SolidJS."
version = "0.3.3"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = "1.15.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
wasmple_buffer_derive = { path = "../wasmple_buffer_derive" }
wasmple_console = { path = "../wasmple_console" }
