[package]
name = "wasmple_console"
description = "a sample project for WebAssembly with Rust & SolidJS."
version = "0.4.6"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = "1.15.0"
wasmple_bridge = { path = "../wasmple_bridge" }

[dev-dependencies]
rstest = "0.15.0"
